--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   flutter_background_service_android: ^6.2.2
   flutter_background_service_ios: ^5.0.0
   webview_flutter:
+  shared_preferences: ^2.2.2
+  device_info_plus: ^9.1.1
 
 dev_dependencies:
   flutter_test:
