--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,12 @@ dependencies:
   webview_flutter:
   shared_preferences: ^2.2.2
   device_info_plus: ^9.1.1
+  flutter_native_splash: ^2.3.8
+  hive: ^2.0.4
+  hive_flutter: ^1.1.0
+  path_provider: ^2.1.1
+  sqflite: ^2.3.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
@@ -69,8 +75,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/splash.gif
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
